[package]
name = "archway-otc"
version = "0.0.1"
authors = ["kromsten <kromstenv@pm.me>"]
edition = "2021"
description = ""
license = "Apache-2.0"
repository = "https://github.com/kromsten/archway-otc"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cw-utils = "0.16.0"
cw2 = "0.16.0"
cw20 = "0.16.0"
cosmwasm-std = "1.0.0-beta8"
cw-storage-plus = "0.16.0"
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = "1.0.31"

[dev-dependencies]
cosmwasm-schema = "1.0.0-beta8"
cw-multi-test = "0.16.0"
cw20-base = { version = "0.16.0", features = ["library"] }
